--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,9 +1,9 @@
 <% layout('layouts/boilerplate') %>
 <div class="row mb-5">
-  <h1 class="text-center">New Campground</h1>
   <div class="col-md-6 offset-md-3">
     <div class="card shadow">
       <div class="card-body">
+        <h1 class="text-center card-title">New Campground</h1>
         <form
           action="/campgrounds"
           method="post"
