--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -11,10 +11,14 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.js"></script>
+    <script
+      src="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css"
       rel="stylesheet"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/stylesheets/app.css" />
   </head>
