--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -7,6 +7,7 @@
           src="https://images.unsplash.com/photo-1537225228614-56cc3556d7ed?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8Y2FtcCUyMHRlbnR8ZW58MHx8MHx8&auto=format&fit=crop&w=1000&q=60"
           alt=""
           class="card-img-top"
+          crossorigin="anonymous"
         />
         <div class="card-body">
           <h5 class="card-title">Login</h5>
